# uv-script-manager

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/uv_helper/: __init__.py  cli.py  config.py  config.toml  constants.py  deps.py  display.py  error_guidance.py  git_manager.py  local_changes.py  migrations.py  script_installer.py  state.py  update_status.py  utils.py
src/uv_helper/commands/: __init__.py  install.py  remove.py  update.py
src/uv_helper/migrations/: __init__.py  base.py  migration_001_add_source_type.py  migration_003_add_ref_type.py  runner.py
src/uv_helper/migrations/config/: __init__.py  runner.py  utils.py
src/uv_helper/migrations/db/: __init__.py  migration_001_add_source_type.py  migration_003_add_ref_type.py
src/uv_script_manager/: __init__.py  cli.py  config.py  config.toml  constants.py  deps.py  display.py  git_manager.py  local_changes.py  refs.py  script_installer.py  state.py  utils.py
src/uv_script_manager/commands/: __init__.py  install.py  remove.py  update.py
src/uv_script_manager/migrations/: __init__.py
tests/: cli_helpers.py  test_cli.py  test_cli_browse_doctor.py  test_cli_completion.py  test_cli_import_export.py  test_cli_install.py  test_cli_list.py  test_cli_remove.py  test_cli_show.py  test_cli_update.py  test_config.py  test_deps.py  test_git_manager.py  test_install_handler.py  test_local_changes.py  test_migrations.py  test_remove_handler.py  test_script_installer.py  test_script_installer_additional.py  test_security.py  test_state.py  test_update_handler.py  test_utils.py
(+8 files in other folders)
