[project]
name = "uv-helper"
version = "1.1.0"
description = "CLI tool to install and manage Python scripts from Git repositories without setup.py/pyproject.toml"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Luis M Alvarez" }]
license = { file = "LICENSE" }
keywords = ["uv", "python", "cli", "package-manager"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "click>=8.3.0",
  "rich>=14.2.0",
  "tomli-w>=1.2.0",
  "giturlparse>=0.14.0",
  "pathvalidate>=3.3.1",
  "pydantic>=2.12.3",
  "tinydb>=4.8.2",
]

[project.scripts]
uv-helper = "uv_helper.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
extend-select = ["E", "B", "Q", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[dependency-groups]
dev = [
  "pytest>=8.4.2",
  "pytest-cov>=7.0.0",
  "pytest-mock>=3.15.1",
  "ruff>=0.14.2",
  "ty>=0.0.1a25",
]
